src/objects/Legal_Entity__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Flat_Cost__c</fullName>
        <description>Cheque in Favor of - for Payment of Flat Cost</description>
        <label>Account Name (Flat Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_MCF__c</fullName>
        <label>Account Name (MCF)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_SRL__c</fullName>
        <label>Account Name SRL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Service_Tax__c</fullName>
        <description>Service tax cheque in favor of</description>
        <label>Account Name (GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_TDS__c</fullName>
        <label>Account Name(TDS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Flat_Cost__c</fullName>
        <label>Account Number (Flat Cost)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_MCF__c</fullName>
        <label>Account Number (MCF)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_SRL__c</fullName>
        <label>Account Number SRL</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Service_tax__c</fullName>
        <label>Account Number (GST)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_TDS__c</fullName>
        <label>Account Number(TDS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type_Flat_Cost__c</fullName>
        <label>Account Type(Flat Cost)</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escrow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type_GST__c</fullName>
        <label>Account Type(GST)</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escrow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type_TDS__c</fullName>
        <label>Account Type(TDS)</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escrow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatory__c</fullName>
        <label>Authorized Signatory</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Flat_Cost__c</fullName>
        <label>Bank Name (Flat Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_MCF__c</fullName>
        <label>Bank Name (MCF)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_SRL__c</fullName>
        <label>Bank Name SRL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_Service_tax__c</fullName>
        <label>Bank Name (GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_TDS__c</fullName>
        <label>Bank Name(TDS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Flat_Cost__c</fullName>
        <label>Branch(Flat Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_GST__c</fullName>
        <label>Branch(GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_TDS__c</fullName>
        <label>Branch(TDS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIN__c</fullName>
        <description>Corporate Identification Number</description>
        <label>CIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSTIN__c</fullName>
        <label>GSTIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_TIN__c</fullName>
        <label>GST TIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_Flat_Cost__c</fullName>
        <label>IFSC Code (Flat Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_MCF__c</fullName>
        <label>IFSC Code (MCF)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_SRL__c</fullName>
        <label>IFSC Code SRL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_Service_Tax__c</fullName>
        <label>IFSC Code (GST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code_TDS__c</fullName>
        <label>IFSC Code (TDS)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICR_CodeSRL__c</fullName>
        <label>MICR CodeSRL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICR_Code_Flat_Cost__c</fullName>
        <label>MICR Code (Flat Cost)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MICR_Code_Service_Tax__c</fullName>
        <label>MICR Code (Service Tax)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Allow_Auto_Increment_MRN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Auto Increment MRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RDS_City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Company_Code__c</fullName>
        <label>Company Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RDS_Company_ID__c</fullName>
        <label>Company ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RDS_Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Master_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Config</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Legal Entities</relationshipLabel>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_PAN_No__c</fullName>
        <label>PAN No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RDS_Pin_Code__c</fullName>
        <label>Pin Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Service_Tax_No__c</fullName>
        <label>Service Tax No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RDS_TDS_Circle__c</fullName>
        <label>TDS Circle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RERA_Number__c</fullName>
        <label>RERA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPV_Bank_Account__c</fullName>
        <label>SPV Bank Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Legal Entity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>